--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-Site do 1º Ano B ! 
+<header>ALURAFLIX</header>
  
-Sala 04 
+<h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME</h1>
 
-Escola Dr João Pires de Camargo !
-
-
+<P>#homem-aranha</P>
